--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,19 +1,20 @@
 {{ define "main" }}
 <div class="row justify-content-center">
   <div class="col-md-12 col-lg-10 col-xl-8">
+	
     <article>
       <h1 class="text-center">{{ if eq .CurrentSection .FirstSection }}{{ .Section | humanize }}{{ else }}{{ .Title }}{{ end }}</h1>
       <div class="text-center">{{ .Content }}</div>
 			<div class="card-list">
 				{{ $currentSection := .CurrentSection }}
-				{{ range where .Site.RegularPages.ByTitle "Section" .Section }}
-					{{ if in (.RelPermalink | string) $currentSection.RelPermalink }}
+				{{ range .Data.Pages.ByDate.Reverse  }}
+					
 						<div class="card my-3">
 							<div class="card-body">
-								<a class="stretched-link" href="{{ .RelPermalink }}">{{ .Params.title | title }} &rarr;</a>
+								<a class="stretched-link" href="{{ .Permalink }}">{{ .Title }} &rarr;</a>
 							</div>
 						</div>
-					{{ end }}
+			
 				{{ end }}
 			</div>
     </article>
