--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
     <div class="col-lg-12 col-xl-12 text-center">
       <p class="lead">Glennis Insights app documentation. Library of app objects, measures, dimensions, and load scripts.</p>
       
-      <p >Site automatically reloads when new updates are detected. Learn more about the documentation workflow <a href="#" class="text-info">here</a>.
+      <p >Learn about the documentation workflow, known issues, and the project roadmap <a href="/about/" class="text-info">here</a>.
     </p>
     </div>
   </div>
