--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,7 +10,7 @@
     {{ $paginator := .Paginate (.Data.Pages) -}}
     {{ range $paginator.Pages -}}
     <div class="col">
-      <div class="card m-2">
+      <div class="card m-4 p-2 border-0">
   
         <div class="card-body">
           <article>
