--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,13 +2,11 @@
 <section class="section container-fluid mt-n3 pb-3">
   <div class="row justify-content-center my-5 py-5">
     <div class="col-lg-12 text-center">
-      <h1 class="mt-0">{{ .Title }}</h1>
+      <h1 class="mt-0">Glennis Insights<br>Analyst Documentation</h1>
     </div>
     <div class="col-lg-12 col-xl-12 text-center">
-      <p class="lead">Glennis Insights app documentation. Library of app objects, measures, dimensions, and load scripts.</p>
+      <p class="lead">Library of app objects, measures, dimensions, and load scripts.<br>Reference material for BI processes and guidelines.</p>
       
-      <p >Learn about the documentation workflow, known issues, and the project roadmap <a href="/about/" class="text-info">here</a>.
-    </p>
     </div>
   </div>
 </section>
